--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,13 @@
 # Ignore bin, include, lib, lib64, share
-Code/bin/
-Code/include/
-Code/lib/
-Code/lib64/
-Code/share/
+src/bin
+src/include/
+src/lib/
+src/lib64/
+src/share/
 
 # Ignore all png files
 *.png
 # Ignore all gml files
 *.gml
+# Ignore gurobi license files
+gurobi.lic
