fix: Update gitignore to not commit artifacts

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ src/include/
 src/lib/
 src/lib64/
 src/share/
-**/__pycache___
+__pycache___
 
 # Ignore all png files
 *.png
@@ -12,5 +12,7 @@ src/share/
 *.gml
 # Ignore gurobi license files
 gurobi.lic
+# Ignore logs
+*.log
 
 solution.txt
