fix: Delete and gitignore artifacts

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ __pycache___
 # Ignore gurobi license files
 gurobi.lic
 # Ignore logs
-*.log
-
+log/
+# Ignore input/output files
+inp-params.txt
 solution.txt
